--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.45.4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react-day-picker": "^5.2.1",
     "@vercel/analytics": "^1.5.0",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
