--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-hook-form": "^7.63.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.2.1",
+    "resend": "^6.4.2",
     "sonner": "^2.0.7",
     "svix": "^1.81.0",
     "tailwind-merge": "^3.3.1",
