--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/canvas-confetti": "^1.9.0",
     "@types/react-day-picker": "^5.2.1",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/og": "^0.8.5",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
